--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <body>
     <header>
       <nav>
-        <a href="index.html">webstudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>studio</li>
-          <li>portfolio</li>
-          <li>contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -30,6 +30,7 @@
       <section>
         <ul>
           <li>
+            <h2>naglowek</h2>
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
@@ -64,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="images/img_11.jpg"
+              src="./images/img_11.jpg"
               alt="monitor"
               width="360"
               height="300"
@@ -72,7 +73,7 @@
           </li>
           <li>
             <img
-              src="images/img_22.jpg"
+              src="./images/img_22.jpg"
               alt="whatsapp application"
               width="360"
               height="300"
@@ -80,7 +81,7 @@
           </li>
           <li>
             <img
-              src="images/img_33.jpg"
+              src="./images/img_33.jpg"
               alt="cell phone and laptop"
               width="360"
               height="300"
@@ -92,22 +93,37 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/mark_2.jpg" alt="" width="264" height="260" />
+            <img
+              src="./images/mark_2.jpg"
+              alt="Mark"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/tom_2.jpg" alt="" width="264" height="260" />
+            <img src="./images/tom_2.jpg" alt="Tom" width="264" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/camila_2.jpg" alt="" width="264" height="260" />
+            <img
+              src="./images/camila_2.jpg"
+              alt="Camila"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/daniel_2.jpg" alt="" width="264" height="260" />
+            <img
+              src="./images/daniel_2.jpg"
+              alt="Daniel"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -115,7 +131,7 @@
       </section>
     </main>
     <footer>
-      <a href="index.html">webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
